--- a/README
+++ b/README
@@ -57,6 +57,9 @@ METHODS
     This is a synonym for "get"
 
 AVAILABILITY
+    The project homepage is
+    <http://metacpan.org/release/WWW-Hashbang-Pastebin-Client/>.
+
     The latest version of this module is available from the Comprehensive
     Perl Archive Network (CPAN). Visit <http://www.perl.com/CPAN/> to find a
     CPAN site near you, or see
