--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl module {{$dist->name}}
 
 {{$NEXT}}
+ - Update for latest changes in WWW::Hashbang::Pastebin - strip terminating + from
+   ID, if present (instead of ., which was the previous way to get HTML output)
 
 0.001     2012-03-16
- -
+ - First release
